<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fright Night</string>
    <string name="play_button">Start Game</string>
    <string name="game_over">Game Over</string>
    <string name="score">Score: %d</string>
    <string name="high_score">High Score: %d</string>
    <string name="tap_to_continue">Tap to continue</string>
    <string name="instructions">Explore the scary landscape. Set your fear level!</string>
    <string name="scary_level_label">🎃 SCHRIK NIVEAU 🎃</string>
</resources>
